--- a/frontend/src/styles/croissant-rating.css
+++ b/frontend/src/styles/croissant-rating.css
@@ -85,7 +85,7 @@
   }
   
   .croissant.half::before {
-    content: '🥐';
+    content: '🍪';
     position: absolute;
     left: 0;
     top: 0;
@@ -95,7 +95,7 @@
   }
   
   .croissant.half::after {
-    content: '🥐';
+    content: '🍪';
     position: absolute;
     left: 0;
     top: 0;
